# matplotlib-example

./: CMakeLists.txt  README.md  main.cpp
example/: Errorbar.cpp  histogram.cpp
example/ros/: CMakeLists.txt  pose_error_std.cpp
